apps/vmusic-be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmusic-be
  namespace: api
  labels:
    app: vmusic-be
spec:
  selector:
    matchLabels:
      app: vmusic-be
  template:
    metadata:
      labels:
        app: vmusic-be
    spec:
      containers:
      - name: vmusic-be
        image: hyeonwoo5342/vmusic-be:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: '200Mi'
            cpu: '70m'
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 40
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 25
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
