apps/vmusic-be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmusic-be
  namespace: api
  labels:
    app: vmusic-be
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: vmusic-be
