apps/vmusic-be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmusic-be-ingress
  namespace: api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.vmusic.kr
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vmusic-be
            port:
              number: 8000
